# spectral_phaser

./: CMakeLists.txt  README.md
.github/workflows/: release.yaml
src/: PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h  global.hpp
src/dsp/: phaser.hpp
src/pluginshared/: bpm_sync_lfo.hpp  bpm_sync_ui.hpp  component.hpp  juce_param_listener.hpp  preset_panel.hpp  update_data.hpp  update_gui.hpp  wrap_parameters.hpp
src/ui/: plugin_ui.cpp  plugin_ui.hpp
